// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.identity.sessions;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "personal-website-v2/go-apis/identity/sessions;sessions";

// Proto file describing the User's session.

// The user's session info.
message UserSessionInfo {
	// The unique ID to identify the user's session.
    uint64 id = 1;
    
	// The user ID who owns the session.
    uint64 user_id = 2;

	// The client ID.
    uint64 client_id = 3;

	// The user agent ID.
    uint64 user_agent_id = 4;

	// The user's session type.
    UserSessionTypeEnum.UserSessionType type = 5;

	// It stores the date and time at which the session was created.
    google.protobuf.Timestamp created_at = 6;

	// The user ID to identify the user who created the session.
    uint64 created_by = 7;

	// It stores the date and time at which the session was updated.
    google.protobuf.Timestamp updated_at = 8;

	// The user ID to identify the user who updated the session.
    uint64 updated_by = 9;

	// The user's session status.
    UserSessionStatusEnum.UserSessionStatus status = 10;

	// It stores the date and time at which the session status was updated.
    google.protobuf.Timestamp status_updated_at = 11;

	// The user ID to identify the user who updated the session status.
    uint64 status_updated_by = 12;

    // Optional. The session status comment.
    google.protobuf.StringValue status_comment = 13;

    // Optional. The app ID.
    google.protobuf.UInt64Value app_id = 14;

    // Optional. The start time of the user's session.
    google.protobuf.Timestamp start_time = 15;

    // Optional. The end time of the user's session.
    google.protobuf.Timestamp end_time = 16;

	// The first IP address (sign-in IP address).
    string first_ip = 17;

    // Optional. The last activity time.
    google.protobuf.Timestamp last_activity_time = 18;

    // Optional. The last activity IP address.
    google.protobuf.StringValue last_activity_ip = 19;
}

// Container for enum describing the user's session type.
message UserSessionTypeEnum {
    // The user's session type.
    enum UserSessionType {
        // Unspecified. Do not use.
        UNSPECIFIED = 0;
        WEB = 1;

        // For mobile apps.
        MOBILE = 2;
    }
}

// Container for enum describing the user's session status.
message UserSessionStatusEnum {
    // The user's session status.
    enum UserSessionStatus {
        // Unspecified. Do not use.
        UNSPECIFIED = 0;
        NEW = 1;
        ACTIVE = 2;
        ENDED = 3;
        DELETING = 4;
        DELETED = 5;
    }
}
