// Copyright 2024 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.services.emailnotifier;

import "google/protobuf/timestamp.proto";

option go_package = "personal-website-v2/go-data/services/emailnotifier;emailnotifier";

// Proto file describing the Notification.

// The notification.
message Notification {
    // The unique ID to identify the notification.
    string id = 1;

	// It stores the date and time at which the notification was created.
    google.protobuf.Timestamp created_at = 2;

	// The user ID to identify the user who created the notification.
    uint64 created_by = 3;

	// The notification group name.
    string group = 4;
    
	// The notification recipients.
    repeated string recipients = 5;

	// The notification subject.
    string subject = 6;

	// The notification body.
    bytes body = 7;

	// The notification metadata.
    NotificationMetadata metadata = 8;
}

// The notification metadata.
message NotificationMetadata {
    // The app session ID.
    uint64 app_session_id = 1;

    // The email notifier ID.
    uint32 email_notifier_id = 2;

    // The transaction ID.
    string tran_id = 3;
}
